CHATS_SIT/force-app/main/default/objects/sfsit_t_sbsd_indiv_emplmt_hist__x.object
<CustomObject>
    <description>sfsit$t_sbsd_indiv_emplmt_hist</description>
    <externalDataSource>Heroku_Connect_datasource</externalDataSource>
    <externalName>sfsit$t_sbsd_indiv_emplmt_hist</externalName>
    <fields>
        <fullName>adr_city__c</fullName>
        <description>adr_city</description>
        <externalDeveloperName>adr_city</externalDeveloperName>
        <label>City</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>adr_line_1__c</fullName>
        <description>adr_line_1</description>
        <externalDeveloperName>adr_line_1</externalDeveloperName>
        <label>Address line 1</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>adr_line_2__c</fullName>
        <description>adr_line_2</description>
        <externalDeveloperName>adr_line_2</externalDeveloperName>
        <label>Address line 2</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>adr_line_3__c</fullName>
        <description>adr_line_3</description>
        <externalDeveloperName>adr_line_3</externalDeveloperName>
        <label>Address line 3</label>
        <length>26</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>adr_state__c</fullName>
        <description>adr_state</description>
        <externalDeveloperName>adr_state</externalDeveloperName>
        <label>State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>adr_zip_extn__c</fullName>
        <description>adr_zip_extn</description>
        <externalDeveloperName>adr_zip_extn</externalDeveloperName>
        <label>Zip Ext.</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>adr_zip_main__c</fullName>
        <description>adr_zip_main</description>
        <externalDeveloperName>adr_zip_main</externalDeveloperName>
        <label>Zip</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_ownrshp__c</fullName>
        <description>cde_ownrshp</description>
        <externalDeveloperName>cde_ownrshp</externalDeveloperName>
        <label>Ownership Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_reason_termtn__c</fullName>
        <description>cde_reason_termtn</description>
        <externalDeveloperName>cde_reason_termtn</externalDeveloperName>
        <label>Termination reason code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
   <fields>
        <fullName>cde_source_vrfyd_se__c</fullName>
        <description>cde_source_vrfyd_se</description>
        <externalDeveloperName>cde_source_vrfyd_se</externalDeveloperName>
        <label>Self employment verification code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_type_emplmt__c</fullName>
        <description>cde_type_emplmt</description>
        <externalDeveloperName>cde_type_emplmt</externalDeveloperName>
        <label>Employment Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_type_vrfyd_se__c</fullName>
        <description>cde_type_vrfyd_se</description>
        <externalDeveloperName>cde_type_vrfyd_se</externalDeveloperName>
        <label>Code verification type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_wage_min__c</fullName>
        <description>cde_wage_min</description>
        <externalDeveloperName>cde_wage_min</externalDeveloperName>
        <label>Minimum wage code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dte_begin_effv__c</fullName>
        <description>dte_begin_effv</description>
        <externalDeveloperName>dte_begin_effv</externalDeveloperName>
        <label>Effective Begin Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dte_change_last__c</fullName>
        <description>dte_change_last</description>
        <externalDeveloperName>dte_change_last</externalDeveloperName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dte_end_effv__c</fullName>
        <description>dte_end_effv</description>
        <externalDeveloperName>dte_end_effv</externalDeveloperName>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dte_end_hire_temp__c</fullName>
        <description>dte_end_hire_temp</description>
        <externalDeveloperName>dte_end_hire_temp</externalDeveloperName>
        <label>Temporary/Seasonal Estimated End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dte_pay_first__c</fullName>
        <description>dte_pay_first</description>
        <externalDeveloperName>dte_pay_first</externalDeveloperName>
        <label>First Pay Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dte_rptd_change__c</fullName>
        <description>dte_rptd_change</description>
        <externalDeveloperName>dte_rptd_change</externalDeveloperName>
        <label>Change Reported Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>idn_client__c</fullName>
        <description>idn_client</description>
        <externalDeveloperName>idn_client</externalDeveloperName>
        <label>Individual ID</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_emplmt_indiv__c</fullName>
        <description>idn_emplmt_indiv</description>
        <externalDeveloperName>idn_emplmt_indiv</externalDeveloperName>
        <label>Identifier Individual Employment</label>
        <length>50</length>
        <referenceTargetField>T_SBSD_INDIV_EMPLMT__c.IDN_EXTNL__c</referenceTargetField>
        <referenceTo>T_SBSD_INDIV_EMPLMT__c</referenceTo>
        <relationshipLabel>Employment Legacy History</relationshipLabel>
        <relationshipName>sfsit_t_sbsd_indiv_emplmt_hist</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>idn_emplmt_indiv_hist__c</fullName>
        <description>idn_emplmt_indiv_hist</description>
        <externalDeveloperName>idn_emplmt_indiv_hist</externalDeveloperName>
        <label>Identifier Individual Employment History</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_user_change_last__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>idn_user_change_last</description>
        <externalDeveloperName>idn_user_change_last</externalDeveloperName>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>sfsit_t_sbsd_indiv_emplmt_hist</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ind_record_delete_logcl__c</fullName>
        <description>ind_record_delete_logcl</description>
        <externalDeveloperName>ind_record_delete_logcl</externalDeveloperName>
        <label>Logical delete indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ind_stubs_pay_rcvs__c</fullName>
        <description>ind_stubs_pay_rcvs</description>
        <externalDeveloperName>ind_stubs_pay_rcvs</externalDeveloperName>
        <label>Receives pay stubs?</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nam_busns__c</fullName>
        <description>nam_busns</description>
        <externalDeveloperName>nam_busns</externalDeveloperName>
        <label>business name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nam_dba__c</fullName>
        <description>nam_dba</description>
        <externalDeveloperName>nam_dba</externalDeveloperName>
        <label>DBA name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nbr_phone__c</fullName>
        <description>nbr_phone</description>
        <externalDeveloperName>nbr_phone</externalDeveloperName>
        <label>Phone number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nbr_phone_extn__c</fullName>
        <description>nbr_phone_extn</description>
        <externalDeveloperName>nbr_phone_extn</externalDeveloperName>
        <label>Extension phone</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nbr_seq_emplmt_indiv__c</fullName>
        <description>nbr_seq_emplmt_indiv</description>
        <externalDeveloperName>nbr_seq_emplmt_indiv</externalDeveloperName>
        <label>Number sequence indiv employment</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nbr_seq_hist__c</fullName>
        <description>nbr_seq_hist</description>
        <externalDeveloperName>nbr_seq_hist</externalDeveloperName>
        <label>Number Sequence history</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Individual Employment History</label>
    <pluralLabel>Individual Employment History</pluralLabel>
</CustomObject>